# luce-megakernel

./: CONTRIBUTING.md  README.md
dflash/: CMakeLists.txt  MEGA_PFLASH_TASKS.md  README.md  RESULTS.md  pyproject.toml
dflash/docs/: RTX5090_BENCHMARKS.md  RTX5090_TUNING_LEDGER.md  SPEC_PREFILL.md  prefix-cache-design.md
dflash/reports/rtx5090_kernel_fusion/: bench_llm_default_topk_rollback.json
dflash/scripts/: _prefill_hook.py  bench_prefill_backends.py  bench_server.py  prefix_cache.py  server.py  server_tools.py  setup_system.sh  test_full_compress_cache.py
dflash/src/: bsa_fwd_hdim256_inst.cu  bsa_launcher.cu  ddtree_topk.cu  expert_cache.cpp  expert_cache.h  f16_convert.cu  flashprefill.cpp  flashprefill.h  flashprefill_kernels.cu  flashprefill_q8.cpp  gguf_target_loader.cpp  internal.h  laguna_internal.h  laguna_target_graph.cpp  mega_pflash_native.cpp  mega_pflash_native.h  pflash_chunk_select.cpp  pflash_chunk_select.h  qwen35_target_graph.cpp  qwen35moe_target_graph.cpp  qwen3_0p6b_drafter.h  qwen3_0p6b_graph.cpp  qwen3_0p6b_loader.cpp  qwen3_drafter.cpp  qwen3_drafter.h  safetensors_draft.cpp
dflash/src/dflash/server/: __init__.py
dflash/test/: bench_laguna_ttft.cpp  smoke_bsa_hdim256.cpp  smoke_mega_pflash_native.cpp  smoke_moe_forward.cpp  smoke_qwen3_0p6b_forward.cpp  test_dflash.cpp  test_dflash_moe.cpp  test_flashprefill_kernels.cpp  test_laguna_daemon.cpp  test_moe_batch.cpp  test_pflash_chunk_select.cpp
dflash/tests/: test_server.py
docs/: BENCHMARKS.md
megakernel/: mega_pflash.py  mega_pflash_generate.py  mega_pflash_score.cu  model.py  (+5 more)
(+4 files in other folders)
